Make code compatible to JDK17.